--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -43,7 +43,7 @@
                       <td><%= assign.user.email %></td>
                       <td><%= link_to I18n.t('views.button.delete'), team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
                         <% if ( current_user.id == assign.team.owner.id ) && ( current_user.id != assign.user.id ) %>
-                      <td><%= link_to '権限移動', changeowner_team_path(@team.id, assign: assign ), method: :patch, class: 'btn btn-sm btn-info' %></td>
+                      <td><%= link_to '権限移動', changeowner_team_path(@team.id, params: { team: { owner_id: assign.user.id} }), method: :patch, class: 'btn btn-sm btn-info' %></td>
                         <% end %>
                     </tr>
                   <% end %>
